package tn.esprit.educlass.enums;

public enum InstitutionStatus {
  PUBLIC,
  PRIVATE
}
